[gd_scene load_steps=6 format=3 uid="uid://bhmxpci4yv5sl"]

[ext_resource type="Texture2D" uid="uid://c23tw1a6lc7lj" path="res://Art/UI/TITLE.png" id="1_qhwcf"]
[ext_resource type="Theme" uid="uid://bp556hodxijho" path="res://Themes/Main Theme.tres" id="2_323uy"]
[ext_resource type="Script" path="res://Scripts/UI/PauseUI.gd" id="2_sn6id"]
[ext_resource type="FontFile" uid="uid://bhivsmjg0y6jw" path="res://Fonts/Farro-Regular.otf" id="4_xqxbc"]
[ext_resource type="Script" path="res://Scripts/game_saved_text.gd" id="5_wgjmq"]

[node name="PauseUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 127.0
offset_top = 554.0
offset_right = 127.0
offset_bottom = 554.0
script = ExtResource("2_sn6id")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -182.0
offset_top = -552.0
offset_right = 710.0
offset_bottom = 246.0
color = Color(0, 0, 0, 0.643137)

[node name="pause_exit_but" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.5
offset_top = -187.5
offset_right = 860.5
offset_bottom = -59.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme = ExtResource("2_323uy")
text = "BACK TO MAIN MENU"

[node name="pause_cont_but" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 59.5
offset_top = -290.5
offset_right = 859.5
offset_bottom = -162.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme = ExtResource("2_323uy")
text = "CONTINUE PLAYING"

[node name="pause_save_but" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.5
offset_top = -399.5
offset_right = 860.5
offset_bottom = -271.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme = ExtResource("2_323uy")
text = "SAVE GAME"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qhwcf")

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 136.0
offset_top = 13.0
offset_right = 361.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("4_xqxbc")
theme_override_font_sizes/font_size = 26
text = "Game Saved."
vertical_alignment = 1
script = ExtResource("5_wgjmq")

[connection signal="pressed" from="pause_exit_but" to="." method="_on_pause_exit_but_pressed"]
[connection signal="pressed" from="pause_cont_but" to="." method="_on_pause_cont_but_pressed"]
[connection signal="pressed" from="pause_save_but" to="." method="_on_pause_save_but_pressed"]
[connection signal="pressed" from="pause_save_but" to="Label" method="on"]
